--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "3.0.0",
-		"@sveltejs/kit": "2.0.1",
+		"@sveltejs/adapter-static": "3.0.1",
+		"@sveltejs/kit": "2.3.2",
+		"@sveltejs/vite-plugin-svelte": "3.0.1",
 		"@typescript-eslint/eslint-plugin": "6.18.1",
 		"@typescript-eslint/parser": "6.18.1",
 		"eslint": "8.56.0",
