--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
 	"devDependencies": {
 		"@sveltejs/adapter-static": "3.0.1",
 		"@sveltejs/kit": "2.5.5",
-		"@sveltejs/vite-plugin-svelte": "3.0.2",
-		"@typescript-eslint/eslint-plugin": "7.5.0",
-		"@typescript-eslint/parser": "7.5.0",
-		"eslint": "8.57.0",
+		"@sveltejs/vite-plugin-svelte": "3.1.0",
+		"@typescript-eslint/eslint-plugin": "7.6.0",
+		"@typescript-eslint/parser": "7.6.0",
+		"eslint": "9.0.0",
 		"eslint-config-prettier": "9.1.0",
-		"eslint-plugin-svelte": "2.35.1",
+		"eslint-plugin-svelte": "2.37.0",
 		"prettier": "3.2.5",
-		"prettier-plugin-svelte": "3.2.2",
-		"svelte": "4.2.12",
+		"prettier-plugin-svelte": "3.2.3",
+		"svelte": "^5.0.0-next.102",
 		"svelte-check": "3.6.9",
 		"tslib": "2.6.2",
-		"typescript": "5.4.3",
-		"vite": "5.2.7"
+		"typescript": "5.4.5",
+		"vite": "5.2.8"
 	},
 	"packageManager": "pnpm@8.15.6",
 	"type": "module",
@@ -34,7 +34,7 @@
 		"@codemirror/lang-python": "6.1.5",
 		"@codemirror/language": "6.10.1",
 		"@codemirror/state": "6.4.1",
-		"@codemirror/view": "6.26.1",
+		"@codemirror/view": "6.26.3",
 		"codemirror": "6.0.1"
 	}
 }
